<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.star.war.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frg_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_main_bg">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_logo"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/search_text"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_character"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edt_bg"
            android:iconifiedByDefault="false"
            android:theme="@style/Theme.SearchView"
            app:defaultQueryHint="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            app:queryHint="@string/character_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_characters"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:adapter="@{vm.searchAdapterField}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_character"
            tools:itemCount="1"
            tools:listitem="@layout/item_character" />

        <LinearLayout
            android:id="@+id/ll_no_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="24dp"
            android:visibility="@{vm.noDataFoundVisibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_character">

            <ImageView
                android:id="@+id/img_no_data"
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:src="@drawable/ic_no_data"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                app:tint="@color/white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_search_character"
                android:gravity="center"
                android:lineSpacingExtra="6sp"
                android:padding="8dp"
                android:background="@drawable/sv_bg"
                android:textColor="@color/white"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/sv_character"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/sv_character"
            app:layout_constraintTop_toBottomOf="@+id/sv_character" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>