<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.star.war.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frg_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_main_bg">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="2"
            android:text="@{vm.title}"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="@+id/img_back"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_details"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:src="@drawable/ic_logo"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.4" />

                <TextView
                    android:id="@+id/txt_birth_yr"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:text="@string/birth_year"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/gl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_logo" />

                <TextView
                    android:id="@+id/txt_birth_yr_val"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:singleLine="true"
                    android:text="@{vm.birthYr}"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txt_birth_yr"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/gl" />

                <TextView
                    android:id="@+id/txt_height"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:text="@string/height"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/gl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_birth_yr_val" />

                <TextView
                    android:id="@+id/txt_height_val"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:singleLine="false"
                    android:text="@{vm.height}"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txt_height"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/gl" />

                <TextView
                    android:id="@+id/txt_home_world"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:text="@string/home_world"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/gl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_height_val" />

                <TextView
                    android:id="@+id/txt_home_world_val"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:singleLine="true"
                    android:text="@{vm.planet}"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txt_home_world"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/gl" />

                <TextView
                    android:id="@+id/txt_population"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:text="@string/population"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/gl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_home_world_val" />

                <TextView
                    android:id="@+id/txt_population_val"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:singleLine="true"
                    android:text="@{vm.population}"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txt_population"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/gl" />

                <TextView
                    android:id="@+id/txt_Films"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:singleLine="true"
                    android:text="@string/films"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/gl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_population_val" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_characters"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:adapter="@{vm.filmAdapterField}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_Films"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_film" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>